--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -36,10 +36,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>com.pm</groupId>
+            <artifactId>proto-config</artifactId>
+            <version>1.0.0</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
