--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -35,10 +35,11 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>com.pm</groupId>
+            <artifactId>proto-config</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
