--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -72,6 +72,18 @@
             <version>3.25.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-starter</artifactId>
+            <version>3.1.0.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-client-spring-boot-starter</artifactId>
+            <version>3.1.0.RELEASE</version>
+        </dependency>
+
         <!-- Lombok (clean boilerplate) -->
         <dependency>
             <groupId>org.projectlombok</groupId>
