--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -58,6 +58,13 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
+        <!-- gRPC Server -->
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-starter</artifactId>
+            <version>3.1.0.RELEASE</version>
+        </dependency>
+
         <!-- Kafka -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
