--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -2,6 +2,12 @@ spring:
   application:
     name: payment-service
 
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
   datasource:
     url: jdbc:postgresql://localhost:5002/paymentdb
     username: admin
@@ -15,6 +21,10 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
+
+kafka:
+  topic:
+    payment-processed: payment-processed
 
 server:
   port: 3003
@@ -33,3 +43,5 @@ proto:
 logging:
   level:
     root: info
+
+
