build out analytics-service end to end, switch to MongoDB
went with MongoDB instead of postgres for analytics - makes more sense
for aggregation queries. consumer persists payment events, service layer
uses MongoTemplate aggregation pipelines for summary, daily volume, and
top accounts. full test coverage across consumer, service, and controller.
updated docker-compose analyticsdb to mongo:7. also cleaned up the
production checklist in TODO

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,18 +84,14 @@ services:
       retries: 5
 
   analyticsdb:
-    image: postgres:16-alpine
+    image: mongo:7
     container_name: analyticsdb
-    environment:
-      POSTGRES_DB: analyticsdb
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: root
     ports:
-      - "5004:5432"
+      - "27017:27017"
     volumes:
-      - analyticsdb_data:/var/lib/postgresql/data
+      - analyticsdb_data:/data/db
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin -d analyticsdb"]
+      test: ["CMD-SHELL", "mongosh --eval \"db.adminCommand('ping')\" --quiet"]
       interval: 10s
       timeout: 5s
       retries: 5
