Parameterize DB and gRPC connection config with env vars
Replaces hardcoded localhost:port values with \${ENV_VAR:default} so
the same application.yml works locally (falls back to localhost defaults)
and in Docker (env vars injected by docker-compose).

customer and account services also add proto.service.address config
so the gRPC client host is injectable — previously hardcoded to localhost,
which breaks container-to-container gRPC calls.

--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -2,11 +2,9 @@ spring:
   application:
     name: account-service
   datasource:
-    #    url: jdbc:postgresql://customer_db:5432/customerdb Use in docker container
-    #    use below when local
-    url: jdbc:postgresql://localhost:5001/accountdb
-    username: admin
-    password: root
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5001}/accountdb
+    username: ${DB_USER:admin}
+    password: ${DB_PASSWORD:root}
     driver-class-name: org.postgresql.Driver
 
   Jpa:
@@ -28,4 +26,8 @@ grpc:
   server:
     port: 9091
 
-
+proto:
+  service:
+    address: ${CUSTOMER_SERVICE_HOST:localhost}
+    grpc:
+      port: 9090
