--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: notification-service
 
   datasource:
-    url: jdbc:postgresql://localhost:5003/notificationdb
-    username: admin
-    password: root
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5003}/notificationdb
+    username: ${DB_USER:admin}
+    password: ${DB_PASSWORD:root}
     driver-class-name: org.postgresql.Driver
 
   jpa:
