--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
   datasource:
-    url: jdbc:postgresql://localhost:5002/paymentdb
-    username: admin
-    password: root
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5002}/paymentdb
+    username: ${DB_USER:admin}
+    password: ${DB_PASSWORD:root}
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -36,7 +36,7 @@ grpc:
 # Address of account-service gRPC server
 proto:
   account:
-    address: localhost
+    address: ${ACCOUNT_SERVICE_HOST:localhost}
     grpc:
       port: 9091
 
