Wire up Zipkin distributed tracing across all services
Adds micrometer-tracing-bridge-brave + zipkin-reporter-brave to all
7 service pom.xml files. Configures 100% sampling with the Zipkin
endpoint pointing to ${ZIPKIN_HOST:localhost}:9411 in each
application.yml so it works both locally and in Docker.

Also injects ZIPKIN_HOST=zipkin into every app service container
in docker-compose.yml so traces flow to the Zipkin container
automatically when running the full stack.

--- a/analytics-service/src/main/resources/application.yml
+++ b/analytics-service/src/main/resources/application.yml
@@ -28,3 +28,11 @@ kafka:
 logging:
   level:
     root: info
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://${ZIPKIN_HOST:localhost}:9411/api/v2/spans
