--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -31,3 +31,11 @@ proto:
     address: ${CUSTOMER_SERVICE_HOST:localhost}
     grpc:
       port: 9090
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://${ZIPKIN_HOST:localhost}:9411/api/v2/spans
