--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,6 +143,19 @@ services:
       timeout: 10s
       retries: 5
 
+  # ── Kafka UI ────────────────────────────────────────────────────────────────
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "8090:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+    depends_on:
+      kafka:
+        condition: service_healthy
+
   # ── Zipkin (Distributed Tracing UI) ────────────────────────────────────────
   zipkin:
     image: openzipkin/zipkin:3
