Replace ddl-auto with Flyway migrations for all PostgreSQL services
Add flyway-core and flyway-database-postgresql deps, create V1 migration
scripts for customer, account, payment, notification, and auth services.
Switch ddl-auto from update to validate so Hibernate checks schema but
never modifies it — all schema changes go through versioned SQL now.

--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -10,9 +10,7 @@ spring:
 
   jpa:
     hibernate:
-      # update: auto-creates/updates tables from entity classes.
-      # Fine for dev — replace with Flyway migrations before production.
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: false
     properties:
       hibernate:
