--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -58,6 +58,16 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
+        <!-- Flyway Database Migrations -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+        </dependency>
+
         <!-- gRPC Server -->
         <dependency>
             <groupId>net.devh</groupId>
