--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -56,6 +56,16 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Flyway Database Migrations -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+        </dependency>
+
         <!-- Validation — @Valid, @NotBlank, @Email on DTOs -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
