Add CORS config, auth proxy controller, and permit /auth/** unauthenticated
Frontend on localhost:4200 needs CORS. Auth endpoints are REST-only so
we proxy them through a new AuthGatewayController (same pattern as
analytics). /auth/** is now permitAll so login/register work without a JWT.

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -25,7 +25,11 @@ grpc:
       address: static://${PAYMENT_SERVICE_HOST:localhost}:9092
       negotiation-type: plaintext
 
-# analytics-service is REST-only, so we forward via RestTemplate
+# auth-service and analytics-service are REST-only, so we forward via RestTemplate
+auth:
+  service:
+    url: http://${AUTH_SERVICE_HOST:localhost}:3006
+
 analytics:
   service:
     url: http://${ANALYTICS_SERVICE_HOST:localhost}:3005
